[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Sprite-0002.png" type="Texture" id=1]
[ext_resource path="res://Instatiables/MonsterSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Lobby.gd" type="Script" id=3]
[ext_resource path="res://Instatiables/Mouse.tscn" type="PackedScene" id=5]
[ext_resource path="res://Instatiables/Room.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="Lobby" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 200 )
current = true
zoom = Vector2( 1.25, 1.25 )
smoothing_enabled = true

[node name="Monsters" parent="." instance=ExtResource( 2 )]
position = Vector2( 216, 88 )

[node name="Lobby" parent="." instance=ExtResource( 6 )]
position = Vector2( 200, 56 )
enabled = false

[node name="CollisionPolygon2D" parent="Lobby" index="1"]
position = Vector2( -8, 88 )
polygon = PoolVector2Array( 120, -136, 280, -64, 280, 40, 120, 120, -40, 48, -40, -56 )

[node name="Sprite" parent="Lobby" index="2"]
modulate = Color( 0.498039, 1, 0.470588, 1 )
position = Vector2( 112, 88 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="Blue Room" parent="." instance=ExtResource( 6 )]
position = Vector2( 472, 320 )
speed = 5
strength = 6
buffness = 3

[node name="Training" parent="Blue Room" index="0"]
wait_time = 2.0

[node name="CollisionPolygon2D" parent="Blue Room" index="1"]
polygon = PoolVector2Array( 96, -32, 96, 32, 0, 80, -96, 32, -96, -40, 0, -88 )

[node name="Sprite" parent="Blue Room" index="2"]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Mouse" parent="UI" instance=ExtResource( 5 )]
z_index = 11

[node name="Stats" type="Control" parent="UI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="ColorRect" parent="UI/Stats"]
margin_left = 512.0
margin_top = 16.0
margin_right = 628.0
margin_bottom = 120.0
color = Color( 0.219608, 0.219608, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp_Label" type="RichTextLabel" parent="UI/Stats"]
margin_left = 520.0
margin_top = 24.0
margin_right = 548.0
margin_bottom = 37.0
text = "HP:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp_Value" type="RichTextLabel" parent="UI/Stats"]
margin_left = 592.0
margin_top = 24.0
margin_right = 632.0
margin_bottom = 40.0
text = "null"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spd_Label" type="RichTextLabel" parent="UI/Stats"]
margin_left = 520.0
margin_top = 48.0
margin_right = 584.0
margin_bottom = 61.0
text = "Speed
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spd_Value" type="RichTextLabel" parent="UI/Stats"]
margin_left = 592.0
margin_top = 48.0
margin_right = 632.0
margin_bottom = 64.0
text = "null"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Str_Label" type="RichTextLabel" parent="UI/Stats"]
margin_left = 520.0
margin_top = 72.0
margin_right = 584.0
margin_bottom = 85.0
rect_pivot_offset = Vector2( 28, 16 )
text = "Strength:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Str_Value" type="RichTextLabel" parent="UI/Stats"]
margin_left = 592.0
margin_top = 72.0
margin_right = 632.0
margin_bottom = 88.0
text = "null"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bff_Label" type="RichTextLabel" parent="UI/Stats"]
margin_left = 520.0
margin_top = 96.0
margin_right = 584.0
margin_bottom = 109.0
text = "Buffness:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bff_Value" type="RichTextLabel" parent="UI/Stats"]
margin_left = 592.0
margin_top = 96.0
margin_right = 624.0
margin_bottom = 112.0
text = "null"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="UI"]
visible = false
margin_right = 8.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Control"]
margin_left = 16.0
margin_top = 304.0
margin_right = 168.0
margin_bottom = 344.0
color = Color( 0.219608, 0.219608, 0.219608, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fight" type="Button" parent="UI/Control"]
margin_left = 24.0
margin_top = 312.0
margin_right = 160.0
margin_bottom = 336.0
custom_styles/hover = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
text = "Fight"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Control2"]
show_behind_parent = true
margin_left = 16.0
margin_top = 16.0
margin_right = 168.0
margin_bottom = 56.0
color = Color( 0.219608, 0.219608, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="UI/Control2"]
margin_left = 24.0
margin_top = 24.0
margin_right = 160.0
margin_bottom = 48.0
custom_styles/hover = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
text = "Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 313, 268, 472, 192, 472, 79, 314, 7, 156, 82, 152, 200, 121, 202, 131, 46, 316, -25, 509, 60, 506, 217, 587, 260, 591, 379, 480, 425, 360, 365, 360, 281, 376, 285, 376, 352, 471, 398, 568, 354, 568, 283, 469, 230, 379, 283, 357, 277, 314, 301, 138, 227, 161, 194 )

[connection signal="remove_mark" from="UI/Mouse" to="." method="_on_Mouse_remove_mark"]
[connection signal="pressed" from="UI/Control/Fight" to="." method="_on_Fight_pressed"]
[connection signal="pressed" from="UI/Control2/Menu" to="." method="_on_Menu_pressed"]

[editable path="Lobby"]
[editable path="Blue Room"]
